fix closed accordion taking too much space

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -466,6 +466,7 @@
     (onClose)="onClose()"
   >
     <div slot="content">
+      <div [style]="{ margin: '100px' }">extra content</div>
       <label class="e-checkbox" for="elvis-checkbox">
         <input type="checkbox" id="elvis-checkbox" />
         <span class="e-checkbox__mark"></span>
