--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -12,6 +12,21 @@
   <!--Accordion-->
   <div class="example-wrapper">
     <h3>Accordion</h3>
+    <button (click)="isOpen = !isOpen">helo</button>
+    <elvia-accordion
+      [isOpen]="isOpen"
+      openLabel="Show"
+      closeLabel="Hide"
+      size="medium"
+      type="normal"
+      typography="title-caps"
+      (onOpen)="onOpen()"
+      (onClose)="onClose()"
+    >
+      <div slot="content">
+        <h3>Hello there</h3>
+      </div>
+    </elvia-accordion>
   </div>
 
   <!-- Badge -->
@@ -454,299 +469,4 @@
       </elvia-tooltip>
     </div>
   </div>
-  <button (click)="isOpen = !isOpen">helo</button>
-  <elvia-accordion
-    [isOpen]="isOpen"
-    openLabel="Show"
-    closeLabel="Hide"
-    size="medium"
-    type="normal"
-    typography="title-caps"
-    (onOpen)="onOpen()"
-    (onClose)="onClose()"
-  >
-    <div slot="content">
-      <div [style]="{ margin: '100px' }">extra content</div>
-      <label class="e-checkbox" for="elvis-checkbox">
-        <input type="checkbox" id="elvis-checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 1</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-      <label class="e-checkbox">
-        <input type="checkbox" />
-        <span class="e-checkbox__mark"></span>
-        <span class="e-checkbox__label">Checkbox option 2</span>
-      </label>
-    </div>
-  </elvia-accordion>
 </div>
