test(context-menu): add initial unit tests

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -28,7 +28,7 @@
         </span>
       </button>
 
-      <div slot="content" class="ewc-popover__list">
+      <div slot="content">
         <div class="ewc-popover__list-group">
           <button>
             <span>Be om tilgang</span>
