feat(dropdown): add support for number values

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -207,6 +207,11 @@
   <!--Dropdown-->
   <div class="example-wrapper">
     <h3>Dropdown</h3>
+    <elvia-dropdown
+      [items]="dropdownItems"
+      label="Select location"
+      (valueOnChange)="onDropdownSelect($event.detail.value)"
+    ></elvia-dropdown>
   </div>
 
   <!--Icon-->
