--- a/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <app-component-header [figmaUrl]="figmaUrl" [lastUpdated]="componentData.changelog[0].date">
-  <ng-container ngProjectAs="headerTitle">Popover</ng-container>
+  <ng-container ngProjectAs="headerTitle">Context menu</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
   </ng-container>
@@ -14,49 +14,28 @@
   <!--STRUCTURE-->
   <app-component-section [sectionTitle]="'Structure'">
     <ng-container ngProjectAs="sectionContent">
-      A popover is a shell with options like close button, heading and text. Content like text and inputs are
-      added inside. Popover closes after clicking outside the popover, “X” or ESC KEY.
-      <div class="e-content-loader e-mb-32 e-w-100 responsive-height" *ngIf="!loadedPopoverStructure"></div>
       <img
-        alt="Informative popover structure"
-        src="./../../../../assets/popover/Group 2791.svg"
-        class="usage-image-desktop e-w-100 responsive-height"
-        (load)="hideContentLoader($event)"
+        alt="List popover structure"
+        src="./../../../../assets/popover/Popover list example.svg"
+        class="usage-image-desktop e-w-100 e-mt-40"
       />
       <div class="usage-image-mobile e-w-100">
-        <app-component-subsubsection [sectionTitle]="'Heading'">
+        <app-component-subsubsection [sectionTitle]="'Trigger'">
           <ng-container ngProjectAs="sectionContent">
-            The heading should be short and clear. The heading is optional.
+            The trigger is often a 'more menu' icon button
+          </ng-container>
+        </app-component-subsubsection>
+        <app-component-subsubsection [sectionTitle]="'Hover'">
+          <ng-container ngProjectAs="sectionContent">
+            You get a light grey color as a background when you hover
           </ng-container>
         </app-component-subsubsection>
         <app-component-subsubsection [sectionTitle]="'Content'">
           <ng-container ngProjectAs="sectionContent">
-            You can have different type of content like text, buttons, input etc. The content will have 100%
-            width, unless the content only consists of text, then the recommended max-width is 450px.
-          </ng-container>
-        </app-component-subsubsection>
-        <app-component-subsubsection [sectionTitle]="'Trigger'">
-          <ng-container ngProjectAs="sectionContent">The trigger can be any kind of button.</ng-container>
-        </app-component-subsubsection>
-        <app-component-subsubsection [sectionTitle]="'Close button'">
-          <ng-container ngProjectAs="sectionContent">
-            The popover will close if you click outside, ESC key, or the button connected to it. The close
-            button is optional and can be removed in special cases like in a menu list.
+            Structures as a list of buttons where the entire area is clickable
           </ng-container>
         </app-component-subsubsection>
       </div>
-
-      <app-component-subsubsection [sectionTitle]="'Text'">
-        <ng-container ngProjectAs="sectionContent">
-          Recommended width for text popover is 450px. This is measured with the line length and number of
-          characters - to get a good readability.
-        </ng-container>
-      </app-component-subsubsection>
-      <app-component-subsubsection [sectionTitle]="'Custom content'">
-        <ng-container ngProjectAs="sectionContent">
-          Insert input, selection controls, buttons etc.
-        </ng-container>
-      </app-component-subsubsection>
     </ng-container>
   </app-component-section>
 
@@ -67,17 +46,53 @@
 
       <app-component-subsection [sectionTitle]="'Responsive'">
         <ng-container ngProjectAs="sectionContent">
-          The popover include responsive functionality and is suited for all devices. However you should keep
-          in mind that it can be overwhelming on mobile if the popover has a lot of content.
+          The context menu include responsive functionality and is suited for all devices. However you should
+          keep in mind that it can be overwhelming on mobile if the context menu has a lot of content.
         </ng-container>
       </app-component-subsection>
 
       <app-component-subsection [sectionTitle]="'Position'">
         <ng-container ngProjectAs="sectionContent">
-          Popover can be positioned above and below the clickable trigger and aligned in the center, left or
-          right.
+          The context menu can be positioned above and below the clickable trigger and aligned in the center,
+          left or right.
         </ng-container>
       </app-component-subsection>
+    </ng-container>
+  </app-component-section>
+
+  <!--OPTIONS-->
+  <app-component-section [sectionTitle]="'Options'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsubsection [sectionTitle]="'Icons'">
+        <ng-container ngProjectAs="sectionContent">
+          Use icons to help users easily recognize known actions.
+
+          <app-component-example-generator
+            [componentData]="contextMenuIconsCode"
+            [inlineExample]="true"
+          ></app-component-example-generator>
+        </ng-container>
+      </app-component-subsubsection>
+      <app-component-subsubsection [sectionTitle]="'Headings'">
+        <ng-container ngProjectAs="sectionContent">
+          Different actions can be separated by headings and provide more context to the actions.
+
+          <app-component-example-generator
+            [componentData]="contextMenuHeadingsCode"
+            [inlineExample]="true"
+          ></app-component-example-generator>
+        </ng-container>
+      </app-component-subsubsection>
+      <app-component-subsubsection [sectionTitle]="'Selectable'">
+        <ng-container ngProjectAs="sectionContent">
+          Always one alternative selected, works likes a radio button.
+
+          <app-component-example-generator
+            [componentData]="contextMenuSelectableCode"
+            [inlineExample]="true"
+          ></app-component-example-generator>
+        </ng-container>
+      </app-component-subsubsection>
     </ng-container>
   </app-component-section>
 
@@ -92,6 +107,12 @@
               or
               <span class="keyboard-button">Enter</span>
               to open or close the popover.
+            </div>
+            <div>
+              <span class="keyboard-button">ArrowUp</span>
+              or
+              <span class="keyboard-button">ArrowDown</span>
+              to cycle between the options.
             </div>
             <div>
               <span class="keyboard-button">Esc</span>
