--- a/packages/elvis/percy/components/input.html
+++ b/packages/elvis/percy/components/input.html
@@ -153,6 +153,7 @@
       </div>
     </div>
 
+    <!-- Loading input fields -->
     <div class="e-mt-16">
       <div class="e-title-xs e-my-16">Loading state</div>
       <div class="e-form-field e-mb-32">
@@ -183,6 +184,25 @@
         </label>
         <div class="e-input e-input---loading">
           <textarea id="textarea" placeholder="Placeholder text" type="text"></textarea>
+        </div>
+      </div>
+    </div>
+
+    <!-- Readonly input -->
+    <div class="e-mt-16">
+      <div class="e-title-xs e-my-16">Readonly state</div>
+      <div class="e-form-field e-mb-32">
+        <label class="e-form-field__label" for="normal">Normal readonly</label>
+        <div class="e-input e-input---readonly">
+          <input id="normal" type="text" placeholder="Placeholder text" readonly />
+        </div>
+      </div>
+      <div style="width: 240px">
+        <div class="e-form-field e-form-field--compact">
+          <label class="e-form-field__label" for="compact">Compact readonly</label>
+          <div class="e-input e-input---readonly">
+            <input id="compact" type="text" placeholder="Placeholder text" readonly />
+          </div>
         </div>
       </div>
     </div>
