--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -108,7 +108,7 @@ $form-input-padding-compact-active: 3px 9px;
     > input:read-only,
     > input:read-only:focus {
       background: colors.color('grey-02');
-      border: unset;
+      border: 1px solid transparent;
       color: colors.color('text-light');
       padding: $form-input-padding;
     }
@@ -211,7 +211,7 @@ $form-input-padding-compact-active: 3px 9px;
     > input:read-only,
     > input:read-only:focus {
       background: colors.color('grey-02');
-      border: unset;
+      border: 1px solid transparent;
       color: colors.color('text-light');
       padding: $form-input-padding-compact-active;
     }
