feat(context-menu): improve accessibility

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -14,9 +14,10 @@
     <elvia-context-menu (onOpen)="isContextMenuShowing = true" (onClose)="isContextMenuShowing = false">
       <button
         slot="trigger"
-        class="e-btn e-btn--icon e-mr-8"
+        class="e-btn e-btn--icon"
         [ngClass]="{ 'e-btn---selected': isContextMenuShowing }"
         aria-label="More menu"
+        aria-haspopup="menu"
       >
         <span class="e-btn__icon">
           <i class="e-icon e-icon--more_menu e-icon--inverted" aria-hidden="true"></i>
@@ -26,10 +27,10 @@
 
       <div slot="content">
         <div class="ewc-context-menu__list-group">
-          <button>
+          <button role="menu-item">
             <span>Be om tilgang</span>
           </button>
-          <button>
+          <button role="menu-item">
             <span>Legg til bruker</span>
           </button>
         </div>
