clean DEV playground

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,14 +4,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-dropdown
-        [items]="dropdownItems"
-        label="Select location"
-        [placeholder]="'Dropdown placeholder'"
-        (valueOnChange)="onDropdownSelect($event.detail.value)"
-      ></elvia-dropdown>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
