--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -9,40 +9,6 @@
     <div class="e-bg-grey"></div>
   </div>
 
-  <div class="example-wrapper">
-    <h3>Context menu</h3>
-    <elvia-context-menu (onOpen)="isContextMenuShowing = true" (onClose)="isContextMenuShowing = false">
-      <button
-        slot="trigger"
-        class="e-btn e-btn--icon"
-        [ngClass]="{ 'e-btn---selected': isContextMenuShowing }"
-        aria-label="More menu"
-        aria-haspopup="menu"
-      >
-        <span class="e-btn__icon">
-          <i class="e-icon e-icon--more_menu e-icon--inverted" aria-hidden="true"></i>
-          <i class="e-icon e-icon--more_menu" aria-hidden="true"></i>
-        </span>
-      </button>
-
-      <div slot="content">
-        <div class="ewc-context-menu__list-group">
-          <button role="menu-item">
-            <span>Be om tilgang</span>
-          </button>
-          <button role="menu-item">
-            <span>Legg til bruker</span>
-          </button>
-        </div>
-        <div class="ewc-context-menu__list-group">
-          <a>
-            <span>Endre passord</span>
-          </a>
-        </div>
-      </div>
-    </elvia-context-menu>
-  </div>
-
   <!--Accordion-->
   <div class="example-wrapper">
     <h3>Accordion</h3>
@@ -149,6 +115,7 @@
       ></elvia-card>
     </div>
   </div>
+
   <!--Carousel-->
   <div class="example-wrapper">
     <h3>Carousel</h3>
@@ -215,11 +182,47 @@
     </div>
   </div>
 
+  <!-- Context menu -->
+  <div class="example-wrapper">
+    <h3>Context menu</h3>
+    <elvia-context-menu (onOpen)="isContextMenuShowing = true" (onClose)="isContextMenuShowing = false">
+      <button
+        slot="trigger"
+        class="e-btn e-btn--icon"
+        [ngClass]="{ 'e-btn---selected': isContextMenuShowing }"
+        aria-label="More menu"
+        aria-haspopup="menu"
+      >
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--more_menu e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--more_menu" aria-hidden="true"></i>
+        </span>
+      </button>
+
+      <div slot="content">
+        <div class="ewc-context-menu__list-group">
+          <button role="menu-item">
+            <span>Be om tilgang</span>
+          </button>
+          <button role="menu-item">
+            <span>Legg til bruker</span>
+          </button>
+        </div>
+        <div class="ewc-context-menu__list-group">
+          <a>
+            <span>Endre passord</span>
+          </a>
+        </div>
+      </div>
+    </elvia-context-menu>
+  </div>
+
   <!--Datepicker-->
   <div class="example-wrapper">
     <h3>DatePicker</h3>
     <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
   </div>
+
   <!--Date range picker-->
   <div class="example-wrapper">
     <h3>Date range picker</h3>
