--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -201,15 +201,15 @@
 
       <div slot="content">
         <div class="ewc-context-menu__list-group">
-          <button role="menu-item">
+          <button role="menuitem">
             <span>Be om tilgang</span>
           </button>
-          <button role="menu-item">
+          <button role="menuitem">
             <span>Legg til bruker</span>
           </button>
         </div>
         <div class="ewc-context-menu__list-group">
-          <a>
+          <a role="menuitem">
             <span>Endre passord</span>
           </a>
         </div>
