docs(context-menu): improve language

--- a/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
@@ -22,17 +22,17 @@
       <div class="usage-image-mobile e-w-100">
         <app-component-subsubsection [sectionTitle]="'Trigger'">
           <ng-container ngProjectAs="sectionContent">
-            The trigger is often a 'more menu' icon button
+            The trigger is often a 'more menu' icon button.
           </ng-container>
         </app-component-subsubsection>
         <app-component-subsubsection [sectionTitle]="'Hover'">
           <ng-container ngProjectAs="sectionContent">
-            You get a light grey color as a background when you hover
+            You get a light grey color as a background when you hover.
           </ng-container>
         </app-component-subsubsection>
         <app-component-subsubsection [sectionTitle]="'Content'">
           <ng-container ngProjectAs="sectionContent">
-            Structures as a list of buttons where the entire area is clickable
+            Structures as a list of buttons where the entire area is clickable.
           </ng-container>
         </app-component-subsubsection>
       </div>
