docs(context-menu): add example with role menuitemradio

--- a/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
@@ -133,7 +133,11 @@
               </li>
               <li>
                 <span class="code-text">role="menuitem"</span>
-                should be added to each menu item.
+                should be added to each menu item, if it's a regular context menu.
+              </li>
+              <li>
+                <span class="code-text">role="menuitemradio"</span>
+                should be added to each menu item, if it's a selectable context menu.
               </li>
             </ul>
 
